# otus-cpp-pro-2024-08-usoltsevpetr

./: CMakeLists.txt  Doxyfile  IpV4_8h_source.html  annotated.html  classBarEnvironment-members.html  classBarEnvironment.html  classBase-members.html  classBase.html  classBiggestIntConvertible-members.html  classBiggestIntConvertible.html  classChildClassWithStreamOperator.html  classChildClassWithoutStreamOperator.html  classCommentTest.html  classCommonTest-members.html  classCommonTest.html  classConstructFromT-members.html  classConstructFromT.html  classContainerTest-members.html  classContainerTest.html  classConversionHelperBase.html  classConversionHelperDerived.html  classCounter-members.html  classCounter.html  classCustomFunctionNamingTest-members.html  classCustomFunctionNamingTest.html  classCustomFunctorNamingTest-members.html  classCustomFunctorNamingTest.html  classCustomIntegerNamingTest-members.html  classCustomIntegerNamingTest.html  classCustomLambdaNamingTest-members.html  classCustomLambdaNamingTest.html  classCustomStructNamingTest.html  classDerivedTest-members.html  classDerivedTest.html  classDetectNotInstantiatedTest-members.html  classDetectNotInstantiatedTest.html  classDetectNotInstantiatedTypesTest-members.html  classDetectNotInstantiatedTypesTest.html  classDisabledTest.html  classDocument-members.html  (+1330 more)
.github/workflows/: doc.yml  release.yml
hw01/: CMakeLists.txt  google_test_version.cpp  hint  main.cpp
hw02/: CMakeLists.txt  IpV4.cpp  IpV4.h  main.cpp  tests.cpp
hw03/: CMakeLists.txt  cpp_11_allocator.hpp  main.cpp  my_vector.hpp  wrapped_mem.h
hw04/: CMakeLists.txt  main.cpp
hw05/: CMakeLists.txt  main.cpp
hw06/: CMakeLists.txt  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  (+40 more)
